another changes of order activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity" />
-        <activity android:name=".AddHarvestActivity"></activity>
+        <activity android:name=".SecondActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".AddHarvestActivity" />
+        <activity android:name=".OrderActivity" />
+        <activity
+            android:name=".tabbedTest"
+            android:label="@string/title_activity_tabbed_test"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
