reworked tabbedView, repaired 'onDataChanged' and 'onDataRemoved' on Fragment2; simple reworks of xml`s

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bhren.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,13 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"
+        <activity
+            android:name=".SecondActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".AddHarvestActivity" />
-        <activity android:name=".OrderActivity" />
         <activity
-            android:name=".tabbedTest"
-            android:label="@string/title_activity_tabbed_test"
+            android:name=".TestActivity"
+            android:label="@string/title_activity_test"
             android:theme="@style/AppTheme"></activity>
     </application>
 
